--- a/styles/scss/breakpoints/_768up.scss
+++ b/styles/scss/breakpoints/_768up.scss
@@ -198,6 +198,7 @@ CONTENT SECTIONS
 
 .section {
 	padding-top: 15em;
+	background-size: cover;
 }
 
 #section-pieces {
