--- a/styles/scss/breakpoints/_base.scss
+++ b/styles/scss/breakpoints/_base.scss
@@ -533,7 +533,7 @@ SECTION CONTENT GENERAL STYLES
 	width: 100%;
 	background-color: $dark-gray;
 	background-position: top center;
-	background-size: cover;
+	background-size: 100% auto;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	padding-top: 10em;
